--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
 	"version": "0.0.1",
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
+	"engines": {
+		"node": "12.x"
+	},
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.12.4",
+		"express": "^4.15.2",
 		"cors": "^2.8.0"
-	},
-	"engines": {
-		"node": "4.4.5"
 	},
 	"repository": {
 		"type": "git",
